Fix logo spacing
Fixed issue where logo width did not span the entirety of the image.

--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,12 @@ img {
 
 
 .logo {
+    width: 40vw;
+    margin-left: -20px;
     height: auto;
     background-color: rgba(0, 0, 0, 0.4);
     position: relative;
     top: 20vh;
-    gap: -10vw;
     padding: 10px 40px;
     text-align: center;
     justify-content: flex-start;
@@ -48,7 +49,6 @@ img {
 
 .lp-logo {
     height: 10vh;
-
 }
 
 .lavender-peach {
@@ -97,7 +97,6 @@ img {
 }
 
 .log-in-left a {
-    margin-top: 10px;
     color: blue;
     text-decoration: underline;
 }
